--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         function checkPassword() {
             const password = document.getElementById('passwordInput').value;
             const correctPassword = 'purchasevip'; // Substitua pela senha desejada
-            const redirectUrl = 'https://purchasestorevip.lojavirtualnuvem.com.br'; // Substitua pelo URL da sua loja VIP
+            const redirectUrl = 'https://www.purchasestorevip.com.br'; // Substitua pelo URL da sua loja VIP
 
             if (password === correctPassword) {
                 window.location.href = redirectUrl;
